# agent-samples

./: .env  Sample Image Processing Agent.md  code.json  example-code.md  pyproject.toml
multi-agent/: __init__.py
multi-agent/manager/: agent.py
multi-agent/sub_agents/: __init__.py
multi_tool_agent/: .env
pirate_agent/: agent.py
test_agents/: agent.py
time_agent/: agent.py  tools.py
